testsuite/tests/typecheck/should_fail/UnliftedNewtypesInstanceFail.stderr
UnliftedNewtypesInstanceFail.hs:13:3: error: [GHC-83865]
    • Expected a WordRep type, but ‘Bar Bool’ is an IntRep type
    • In the associated newtype family instance declaration for ‘Bar’
      In the instance declaration for ‘Foo Bool’

